[gd_scene load_steps=19 format=2]

[ext_resource path="res://video/Unknown/1Unknown.tres" type="Texture" id=1]
[ext_resource path="res://shaders/ascii-shader/Template1/fineshader.tres" type="Material" id=2]
[ext_resource path="res://worldcamera/mainworld.gd" type="Script" id=3]
[ext_resource path="res://Game.tscn" type="PackedScene" id=4]
[ext_resource path="res://globals/Music.tscn" type="PackedScene" id=5]
[ext_resource path="res://worldcamera/Shakescript.gd" type="Script" id=6]
[ext_resource path="res://shaders/Introshader.tres" type="Material" id=7]
[ext_resource path="res://video/2Aforestview/4view.tres" type="Texture" id=8]

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:light_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.298039, 0.298039, 0.298039, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Shader:material/0:shader_param/character_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 6, 12 ) ]
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("../../ColorRect:material:shader_param/warp_amount")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("../../ColorRect:material:shader_param/vignette_opacity")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.518 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../../ColorRect:material:shader_param/scanlines_opacity")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../../ColorRect:material:shader_param/grille_opacity")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../../ColorRect:material:shader_param/resolution")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1280, 720 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("../../ColorRect:material:shader_param/noise_opacity")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("../../ColorRect:material:shader_param/brightness")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("../../ColorRect:material:shader_param/distort_intensity")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("../../ColorRect:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("../Sprite3D:texture")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 1 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("../../Camera:translation")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 2.95467, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "Retro"

[sub_resource type="Animation" id=13]
resource_name = "Talk_Transition"
tracks/0/type = "value"
tracks/0/path = NodePath("../../Camera:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 3,
"values": [ Vector3( 0, 2.95467, 0 ), Vector3( 0, 2.95467, -0.363175 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../../Game:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=8]
resource_name = "Transition"
tracks/0/type = "value"
tracks/0/path = NodePath("../Shader:material/0")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Shader:material/0:shader_param/character_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 0.31864, 1, 0.287175 ),
"update": 0,
"values": [ Vector2( 3, 5 ), Vector2( 32, 64 ), Vector2( 3, 5 ) ]
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("../../ColorRect:material:shader_param/warp_amount")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1.12, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.8 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("../../ColorRect:material:shader_param/vignette_opacity")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.518, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../../ColorRect:material:shader_param/resolution")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 640, 360 ), Vector2( 1280, 720 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../../ColorRect:material:shader_param/grille_opacity")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.039, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../../ColorRect:material:shader_param/scanlines_opacity")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.032, 0.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("../../ColorRect:material:shader_param/brightness")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.95, 1.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("../../ColorRect:material:shader_param/noise_opacity")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("../../ColorRect:material:shader_param/distort_intensity")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.115, 0.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("../../ColorRect:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ true, false ]
}

[sub_resource type="Animation" id=11]
resource_name = "Unretro"

[sub_resource type="Animation" id=5]
resource_name = "daynight"
tracks/0/type = "value"
tracks/0/path = NodePath(".:light_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.415686, 0.415686, 0.411765, 1 ), Color( 0.137255, 0.156863, 0.372549, 1 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "endtalk_Transition"
tracks/0/type = "value"
tracks/0/path = NodePath("../../Camera:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 3,
"values": [ Vector3( 0, 2.95467, -0.363175 ), Vector3( 0, 2.955, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../../Game:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=7]
resource_name = "nightday"
tracks/0/type = "value"
tracks/0/path = NodePath(".:light_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.137255, 0.156863, 0.372549, 1 ), Color( 0.415686, 0.415686, 0.411765, 1 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "void to forest"
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite3D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Shader:material/0:shader_param/character_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 3, 5 ), Vector2( 32, 64 ), Vector2( 3, 5 ) ]
}

[sub_resource type="QuadMesh" id=4]

[node name="world" type="Spatial"]
script = ExtResource( 3 )

[node name="Music" parent="." instance=ExtResource( 5 )]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Music"]

[node name="MainScreen" type="CanvasLayer" parent="."]

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 2.955, 0 )
script = ExtResource( 6 )

[node name="Timer" type="Timer" parent="Camera"]
autostart = true

[node name="Tween" type="Tween" parent="Camera"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("DirectionalLight")
reset_on_save = false
playback_speed = 0.24
anims/RESET = SubResource( 6 )
anims/Retro = SubResource( 10 )
anims/Talk_Transition = SubResource( 13 )
anims/Transition = SubResource( 8 )
anims/Unretro = SubResource( 11 )
anims/daynight = SubResource( 5 )
anims/endtalk_Transition = SubResource( 14 )
anims/nightday = SubResource( 7 )
"anims/void to forest" = SubResource( 12 )

[node name="Shader" type="MeshInstance" parent="AnimationPlayer"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 2.12631, 2.38419e-07 )
mesh = SubResource( 4 )
skeleton = NodePath("../../Camera")
material/0 = ExtResource( 2 )

[node name="DirectionalLight" type="DirectionalLight" parent="AnimationPlayer"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.000117779, 5.45665, 0.00792336 )
light_color = Color( 0.298039, 0.298039, 0.298039, 1 )
light_energy = 6.555
light_indirect_energy = 16.273
light_specular = 14.894

[node name="Sprite3D" type="Sprite3D" parent="AnimationPlayer"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1.43361, 0, -1, -6.26651e-08, -1.43813, 1.80141, 0.481113 )
centered = false
pixel_size = 0.0045
transparent = false
shaded = true
double_sided = false
texture = ExtResource( 1 )

[node name="Game" parent="." instance=ExtResource( 4 )]
margin_top = 1.0
margin_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="."]
material = ExtResource( 7 )
margin_right = 1280.0
margin_bottom = 720.0

[connection signal="timeout" from="Camera/Timer" to="Camera" method="_on_Timer_timeout"]
[connection signal="end_dialog" from="Game" to="." method="_on_Game_end_dialog"]
[connection signal="room_changed2" from="Game" to="." method="_on_Game_room_changed2"]
[connection signal="start_dialog" from="Game" to="." method="_on_Game_start_dialog"]
